# serializer version: 1
# name: test_system_snapshot[default][control_system]
  '''
  active_faults: []
  allowedSystemModes:
  -   canBePermanent: true
      canBeTemporary: false
      systemMode: HeatingOff
  -   canBePermanent: true
      canBeTemporary: false
      systemMode: Auto
  -   canBePermanent: true
      canBeTemporary: false
      systemMode: AutoWithReset
  -   canBePermanent: true
      canBeTemporary: true
      maxDuration: 1.00:00:00
      systemMode: AutoWithEco
      timingMode: Duration
      timingResolution: 01:00:00
  -   canBePermanent: true
      canBeTemporary: true
      maxDuration: 99.00:00:00
      systemMode: Away
      timingMode: Period
      timingResolution: 1.00:00:00
  -   canBePermanent: true
      canBeTemporary: true
      maxDuration: 99.00:00:00
      systemMode: DayOff
      timingMode: Period
      timingResolution: 1.00:00:00
  -   canBePermanent: true
      canBeTemporary: true
      maxDuration: 99.00:00:00
      systemMode: Custom
      timingMode: Period
      timingResolution: 1.00:00:00
  id: '3432522'
  modelType: EvoTouch
  systemModeStatus:
      isPermanent: true
      mode: AutoWithEco
  system_mode: AutoWithEco
  
  '''
# ---
# name: test_system_snapshot[default][gateway]
  '''
  active_faults: []
  id: '2499896'
  isWiFi: false
  mac: 00D02DEE4E56
  
  '''
# ---
# name: test_system_snapshot[default][hot_water]
  '''
  active_faults: []
  allowedModes: &id001
  - FollowSchedule
  - PermanentOverride
  - TemporaryOverride
  dhwStateCapabilitiesResponse:
      allowedModes: *id001
      allowedStates:
      - 'On'
      - 'Off'
      maxDuration: 1.00:00:00
      timingResolution: 00:10:00
  id: '3933910'
  mode: PermanentOverride
  name: Domestic Hot Water
  scheduleCapabilitiesResponse:
      maxSwitchpointsPerDay: 6
      minSwitchpointsPerDay: 1
      timingResolution: 00:10:00
  state: 'Off'
  stateStatus:
      mode: PermanentOverride
      state: 'Off'
  temperature: 23.0
  temperatureStatus:
      isAvailable: true
      temperature: 23.0
  
  '''
# ---
# name: test_system_snapshot[default][location]
  '''
  country: UnitedKingdom
  id: '2738909'
  locationOwner:
      firstname: David
      lastname: '********'
      userId: '2263181'
      username: nobody@nowhere.com
  locationType: Residential
  name: My Home
  timeZone:
      currentOffsetMinutes: 60
      displayName: (UTC+00:00) Dublin, Edinburgh, Lisbon, London
      offsetMinutes: 0
      supportsDaylightSaving: true
      timeZoneId: GMTStandardTime
  useDaylightSaveSwitching: true
  
  '''
# ---
# name: test_system_snapshot[default][zones]
  '''
  '3432521':
      active_faults: []
      allowedSetpointModes: &id001
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432521'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      modelType: HeatingZone
      name: Dead Zone
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id001
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: PermanentOverride
          targetHeatTemperature: 5.0
      target_cool_temperature: null
      target_heat_temperature: 5.0
      temperature: null
      temperatureStatus:
          isAvailable: false
      zoneType: RadiatorZone
  '3432576':
      active_faults: []
      allowedSetpointModes: &id002
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432576'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Main Room
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id002
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 19.0
      temperatureStatus:
          isAvailable: true
          temperature: 19.0
      zoneType: RadiatorZone
  '3432577':
      active_faults: []
      allowedSetpointModes: &id003
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432577'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Front Room
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id003
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 19.0
      temperatureStatus:
          isAvailable: true
          temperature: 19.0
      zoneType: RadiatorZone
  '3432578':
      active_faults: []
      allowedSetpointModes: &id004
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432578'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Kitchen
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id004
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 20.0
      temperatureStatus:
          isAvailable: true
          temperature: 20.0
      zoneType: RadiatorZone
  '3432579':
      active_faults: []
      allowedSetpointModes: &id005
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432579'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Bathroom Dn
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id005
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 16.0
      target_cool_temperature: null
      target_heat_temperature: 16.0
      temperature: 20.0
      temperatureStatus:
          isAvailable: true
          temperature: 20.0
      zoneType: RadiatorZone
  '3432580':
      active_faults: []
      allowedSetpointModes: &id006
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432580'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Main Bedroom
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id006
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 16.0
      target_cool_temperature: null
      target_heat_temperature: 16.0
      temperature: 21.0
      temperatureStatus:
          isAvailable: true
          temperature: 21.0
      zoneType: RadiatorZone
  '3449703':
      active_faults: []
      allowedSetpointModes: &id007
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3449703'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Kids Room
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id007
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 19.5
      temperatureStatus:
          isAvailable: true
          temperature: 19.5
      zoneType: RadiatorZone
  '3449740':
      active_faults: []
      allowedSetpointModes: &id008
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3449740'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Bathroom Up
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id008
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 16.5
      target_cool_temperature: null
      target_heat_temperature: 16.5
      temperature: 21.5
      temperatureStatus:
          isAvailable: true
          temperature: 21.5
      zoneType: RadiatorZone
  '3450733':
      active_faults: []
      allowedSetpointModes: &id009
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3450733'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      modelType: HeatingZone
      name: Spare Room
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id009
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: PermanentOverride
          targetHeatTemperature: 14.0
      target_cool_temperature: null
      target_heat_temperature: 14.0
      temperature: 19.5
      temperatureStatus:
          isAvailable: true
          temperature: 19.5
      zoneType: RadiatorZone
  
  '''
# ---
# name: test_system_snapshot[hass_118169][control_system]
  '''
  active_faults: []
  allowedSystemModes:
  -   canBePermanent: true
      canBeTemporary: false
      systemMode: HeatingOff
  -   canBePermanent: true
      canBeTemporary: false
      systemMode: Auto
  -   canBePermanent: true
      canBeTemporary: false
      systemMode: AutoWithReset
  -   canBePermanent: true
      canBeTemporary: true
      maxDuration: 1.00:00:00
      systemMode: AutoWithEco
      timingMode: Duration
      timingResolution: 01:00:00
  -   canBePermanent: true
      canBeTemporary: true
      maxDuration: 99.00:00:00
      systemMode: Away
      timingMode: Period
      timingResolution: 1.00:00:00
  -   canBePermanent: true
      canBeTemporary: true
      maxDuration: 99.00:00:00
      systemMode: DayOff
      timingMode: Period
      timingResolution: 1.00:00:00
  -   canBePermanent: true
      canBeTemporary: true
      maxDuration: 99.00:00:00
      systemMode: Custom
      timingMode: Period
      timingResolution: 1.00:00:00
  id: '3432522'
  modelType: EvoTouch
  systemModeStatus:
      isPermanent: true
      mode: AutoWithEco
  system_mode: AutoWithEco
  
  '''
# ---
# name: test_system_snapshot[hass_118169][gateway]
  '''
  active_faults: []
  id: '2499896'
  isWiFi: false
  mac: 00D02DEE4E56
  
  '''
# ---
# name: test_system_snapshot[hass_118169][hot_water]
  '''
  active_faults: []
  allowedModes: &id001
  - FollowSchedule
  - PermanentOverride
  - TemporaryOverride
  dhwStateCapabilitiesResponse:
      allowedModes: *id001
      allowedStates:
      - 'On'
      - 'Off'
      maxDuration: 1.00:00:00
      timingResolution: 00:10:00
  id: '3933910'
  mode: PermanentOverride
  name: Domestic Hot Water
  scheduleCapabilitiesResponse:
      maxSwitchpointsPerDay: 6
      minSwitchpointsPerDay: 1
      timingResolution: 00:10:00
  state: 'Off'
  stateStatus:
      mode: PermanentOverride
      state: 'Off'
  temperature: 23.0
  temperatureStatus:
      isAvailable: true
      temperature: 23.0
  
  '''
# ---
# name: test_system_snapshot[hass_118169][location]
  '''
  country: UnitedKingdom
  id: '2738909'
  locationOwner:
      firstname: David
      lastname: '********'
      userId: '2263181'
      username: nobody@nowhere.com
  locationType: Residential
  name: My Home
  timeZone:
      currentOffsetMinutes: 60
      displayName: (UTC+00:00) Dublin, Edinburgh, Lisbon, London
      offsetMinutes: 0
      supportsDaylightSaving: true
      timeZoneId: GMTStandardTime
  useDaylightSaveSwitching: true
  
  '''
# ---
# name: test_system_snapshot[hass_118169][zones]
  '''
  '3432521':
      active_faults: []
      allowedSetpointModes: &id001
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432521'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      modelType: HeatingZone
      name: Dead Zone
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id001
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: PermanentOverride
          targetHeatTemperature: 5.0
      target_cool_temperature: null
      target_heat_temperature: 5.0
      temperature: null
      temperatureStatus:
          isAvailable: false
      zoneType: RadiatorZone
  '3432576':
      active_faults: []
      allowedSetpointModes: &id002
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432576'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Main Room
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id002
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 19.0
      temperatureStatus:
          isAvailable: true
          temperature: 19.0
      zoneType: RadiatorZone
  '3432577':
      active_faults: []
      allowedSetpointModes: &id003
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432577'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Front Room
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id003
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 19.0
      temperatureStatus:
          isAvailable: true
          temperature: 19.0
      zoneType: RadiatorZone
  '3432578':
      active_faults: []
      allowedSetpointModes: &id004
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432578'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Kitchen
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id004
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 20.0
      temperatureStatus:
          isAvailable: true
          temperature: 20.0
      zoneType: RadiatorZone
  '3432579':
      active_faults: []
      allowedSetpointModes: &id005
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432579'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Bathroom Dn
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id005
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 16.0
      target_cool_temperature: null
      target_heat_temperature: 16.0
      temperature: 20.0
      temperatureStatus:
          isAvailable: true
          temperature: 20.0
      zoneType: RadiatorZone
  '3432580':
      active_faults: []
      allowedSetpointModes: &id006
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432580'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Main Bedroom
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id006
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 16.0
      target_cool_temperature: null
      target_heat_temperature: 16.0
      temperature: 21.0
      temperatureStatus:
          isAvailable: true
          temperature: 21.0
      zoneType: RadiatorZone
  '3449703':
      active_faults: []
      allowedSetpointModes: &id007
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3449703'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Kids Room
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id007
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 19.5
      temperatureStatus:
          isAvailable: true
          temperature: 19.5
      zoneType: RadiatorZone
  '3449740':
      active_faults: []
      allowedSetpointModes: &id008
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3449740'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Bathroom Up
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id008
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 16.5
      target_cool_temperature: null
      target_heat_temperature: 16.5
      temperature: 21.5
      temperatureStatus:
          isAvailable: true
          temperature: 21.5
      zoneType: RadiatorZone
  '3450733':
      active_faults: []
      allowedSetpointModes: &id009
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3450733'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      modelType: HeatingZone
      name: Spare Room
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id009
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: PermanentOverride
          targetHeatTemperature: 14.0
      target_cool_temperature: null
      target_heat_temperature: 14.0
      temperature: 19.5
      temperatureStatus:
          isAvailable: true
          temperature: 19.5
      zoneType: RadiatorZone
  
  '''
# ---
# name: test_system_snapshot[system_002][control_system]
  '''
  active_faults: []
  allowedSystemModes:
  -   canBePermanent: true
      canBeTemporary: false
      systemMode: HeatingOff
  -   canBePermanent: true
      canBeTemporary: false
      systemMode: Auto
  -   canBePermanent: true
      canBeTemporary: false
      systemMode: AutoWithReset
  -   canBePermanent: true
      canBeTemporary: true
      maxDuration: 1.00:00:00
      systemMode: AutoWithEco
      timingMode: Duration
      timingResolution: 01:00:00
  -   canBePermanent: true
      canBeTemporary: true
      maxDuration: 99.00:00:00
      systemMode: Away
      timingMode: Period
      timingResolution: 1.00:00:00
  -   canBePermanent: true
      canBeTemporary: true
      maxDuration: 99.00:00:00
      systemMode: DayOff
      timingMode: Period
      timingResolution: 1.00:00:00
  -   canBePermanent: true
      canBeTemporary: true
      maxDuration: 99.00:00:00
      systemMode: Custom
      timingMode: Period
      timingResolution: 1.00:00:00
  id: '3432522'
  modelType: EvoTouch
  systemModeStatus:
      isPermanent: true
      mode: Auto
  system_mode: Auto
  
  '''
# ---
# name: test_system_snapshot[system_002][gateway]
  '''
  active_faults: []
  id: '2499896'
  isWiFi: false
  mac: 00D02DEE4E56
  
  '''
# ---
# name: test_system_snapshot[system_002][hot_water]
  '''
  active_faults:
  -   faultType: DHWSensorCommunicationLost
      since: '2023-11-30T18:48:40'
  allowedModes: &id001
  - FollowSchedule
  - PermanentOverride
  - TemporaryOverride
  dhwStateCapabilitiesResponse:
      allowedModes: *id001
      allowedStates:
      - 'On'
      - 'Off'
      maxDuration: 1.00:00:00
      timingResolution: 00:10:00
  id: '3933910'
  mode: FollowSchedule
  name: Domestic Hot Water
  scheduleCapabilitiesResponse:
      maxSwitchpointsPerDay: 6
      minSwitchpointsPerDay: 1
      timingResolution: 00:10:00
  state: 'Off'
  stateStatus:
      mode: FollowSchedule
      state: 'Off'
  temperature: null
  temperatureStatus:
      isAvailable: false
  
  '''
# ---
# name: test_system_snapshot[system_002][location]
  '''
  country: UnitedKingdom
  id: '2738909'
  locationOwner:
      firstname: David
      lastname: '********'
      userId: '2263181'
      username: nobody@nowhere.com
  locationType: Residential
  name: My Home
  timeZone:
      currentOffsetMinutes: 60
      displayName: (UTC+00:00) Dublin, Edinburgh, Lisbon, London
      offsetMinutes: 0
      supportsDaylightSaving: true
      timeZoneId: GMTStandardTime
  useDaylightSaveSwitching: true
  
  '''
# ---
# name: test_system_snapshot[system_002][zones]
  '''
  '3432521':
      active_faults: []
      allowedSetpointModes: &id001
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432521'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      modelType: HeatingZone
      name: Dead Zone
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id001
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: PermanentOverride
          targetHeatTemperature: 5.0
      target_cool_temperature: null
      target_heat_temperature: 5.0
      temperature: null
      temperatureStatus:
          isAvailable: false
      zoneType: RadiatorZone
  '3432576':
      active_faults: []
      allowedSetpointModes: &id002
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432576'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      modelType: HeatingZone
      name: Main Room
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id002
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: PermanentOverride
          targetHeatTemperature: 5.0
      target_cool_temperature: null
      target_heat_temperature: 5.0
      temperature: 17.0
      temperatureStatus:
          isAvailable: true
          temperature: 17.0
      zoneType: RadiatorZone
  '3432577':
      active_faults: []
      allowedSetpointModes: &id003
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432577'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Front Room
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id003
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 20.6
      target_cool_temperature: null
      target_heat_temperature: 20.6
      temperature: 20.5
      temperatureStatus:
          isAvailable: true
          temperature: 20.5
      zoneType: RadiatorZone
  '3432578':
      active_faults: []
      allowedSetpointModes: &id004
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432578'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Kitchen
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id004
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 20.0
      target_cool_temperature: null
      target_heat_temperature: 20.0
      temperature: 20.0
      temperatureStatus:
          isAvailable: true
          temperature: 20.0
      zoneType: RadiatorZone
  '3432579':
      active_faults: []
      allowedSetpointModes: &id005
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432579'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Bathroom Dn
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id005
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 18.5
      target_cool_temperature: null
      target_heat_temperature: 18.5
      temperature: 17.5
      temperatureStatus:
          isAvailable: true
          temperature: 17.5
      zoneType: RadiatorZone
  '3432580':
      active_faults: []
      allowedSetpointModes: &id006
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432580'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: TemporaryOverride
      modelType: HeatingZone
      name: Main Bedroom
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id006
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: TemporaryOverride
          targetHeatTemperature: 20.5
          until: '2023-11-30T22:10:00Z'
      target_cool_temperature: null
      target_heat_temperature: 20.5
      temperature: 21.0
      temperatureStatus:
          isAvailable: true
          temperature: 21.0
      zoneType: RadiatorZone
  '3449703':
      active_faults: []
      allowedSetpointModes: &id007
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3449703'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Kids Room
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id007
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 18.6
      target_cool_temperature: null
      target_heat_temperature: 18.6
      temperature: 19.5
      temperatureStatus:
          isAvailable: true
          temperature: 19.5
      zoneType: RadiatorZone
  '3449740':
      active_faults: []
      allowedSetpointModes: &id008
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3449740'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      modelType: HeatingZone
      name: Bathroom Up
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id008
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: FollowSchedule
          targetHeatTemperature: 19.0
      target_cool_temperature: null
      target_heat_temperature: 19.0
      temperature: 19.0
      temperatureStatus:
          isAvailable: true
          temperature: 19.0
      zoneType: RadiatorZone
  '3450733':
      active_faults: []
      allowedSetpointModes: &id009
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3450733'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      modelType: HeatingZone
      name: Spare Room
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 1
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id009
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: PermanentOverride
          targetHeatTemperature: 10.0
      target_cool_temperature: null
      target_heat_temperature: 10.0
      temperature: 15.0
      temperatureStatus:
          isAvailable: true
          temperature: 15.0
      zoneType: RadiatorZone
  
  '''
# ---
# name: test_system_snapshot[system_004][control_system]
  '''
  active_faults: []
  allowedSystemModes:
  -   canBePermanent: true
      canBeTemporary: false
      systemMode: Auto
  -   canBePermanent: true
      canBeTemporary: true
      maxDuration: 1.00:00:00
      systemMode: AutoWithEco
      timingMode: Duration
      timingResolution: 01:00:00
  -   canBePermanent: true
      canBeTemporary: true
      maxDuration: 99.00:00:00
      systemMode: Away
      timingMode: Period
      timingResolution: 1.00:00:00
  -   canBePermanent: true
      canBeTemporary: false
      systemMode: HeatingOff
  id: '3935923'
  modelType: EvoTouch
  systemModeStatus:
      isPermanent: true
      mode: Auto
  system_mode: Auto
  
  '''
# ---
# name: test_system_snapshot[system_004][gateway]
  '''
  active_faults: []
  id: '2820628'
  isWiFi: false
  mac: 00D02DF114FD
  
  '''
# ---
# name: test_system_snapshot[system_004][hot_water]
  '''
  {}
  
  '''
# ---
# name: test_system_snapshot[system_004][location]
  '''
  country: CzechRepublic
  id: '2664492'
  locationOwner:
      firstname: Jan
      lastname: '********'
      userId: '2224990'
      username: nobody@nowhere.com
  locationType: Residential
  name: Summer House
  timeZone:
      currentOffsetMinutes: 120
      displayName: "(UTC+01:00) Praha, Bratislava, Budape\u0161\u0165, B\u011Blehrad,\
          \ Lubla\u0148"
      offsetMinutes: 60
      supportsDaylightSaving: true
      timeZoneId: CentralEuropeStandardTime
  useDaylightSaveSwitching: true
  
  '''
# ---
# name: test_system_snapshot[system_004][zones]
  '''
  '3935922':
      active_faults: []
      allowedSetpointModes: &id001
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3935922'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      modelType: RoundWireless
      name: Name 3935922
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 0
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id001
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: PermanentOverride
          targetHeatTemperature: 15.0
      target_cool_temperature: null
      target_heat_temperature: 15.0
      temperature: 21.5
      temperatureStatus:
          isAvailable: true
          temperature: 21.5
      zoneType: Thermostat
  '4368406':
      active_faults: []
      allowedSetpointModes: &id002
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '4368406'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      modelType: RoundWireless
      name: Name 3935922
      scheduleCapabilities:
          maxSwitchpointsPerDay: 6
          minSwitchpointsPerDay: 0
          setpointValueResolution: 0.5
          timingResolution: 00:10:00
      setpointCapabilities:
          allowedSetpointModes: *id002
          canControlCool: false
          canControlHeat: true
          maxDuration: 1.00:00:00
          maxHeatSetpoint: 35.0
          minHeatSetpoint: 5.0
          timingResolution: 00:10:00
          valueResolution: 0.5
      setpointStatus:
          setpointMode: PermanentOverride
          targetHeatTemperature: 15.0
      target_cool_temperature: null
      target_heat_temperature: 15.0
      temperature: 23.0
      temperatureStatus:
          isAvailable: true
          temperature: 23.0
      zoneType: Thermostat
  
  '''
# ---
